[tool.poetry]
name = "baseten"
version = "0.1.0"
description = ""
authors = ["Khoa Ngo <ngominhkhoa2006@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.4"
pandas = "^2.3.1"
statsmodels = "^0.14.5"
python-dotenv = "^1.1.1"


[tool.poetry.group.dev.dependencies]
pandas-stubs = "^2.3.0.250703"
black = "^25.1.0"
types-requests = "^2.32.4.20250611"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
